# hump-yard

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
examples/: README.md  config.example.json
src/file_monitor/: base_plugin.py  cli.py  config.template.json  config_reader.py  daemon.py
src/file_monitor/plugins/: exif_plugin.py
src/folder_monitor/: __init__.py  base_plugin.py  cli.py  config.template.json  config_reader.py  daemon.py
src/folder_monitor/plugins/: config.template.json  rename_plugin.py
src/hamp_yard/: __init__.py  base_plugin.py  daemon.py
src/hump_yard/: __init__.py  base_plugin.py  cli.py  config_reader.py  daemon.py
src/hump_yard/plugins/: __init__.py  exif_plugin.py  rename_plugin.py
