[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "folder-monitor"
version = "0.3.0"
description = "File system monitoring daemon with plugin support"
readme = "README.md"
authors = [
    {name = "nalivayev", email = "nalivayev@users.noreply.github.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Monitoring",
]
keywords = ["file-monitoring", "daemon", "plugins", "watchdog"]
requires-python = ">=3.10"
dependencies = [
    "watchdog>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/nalivayev/hump-yard"
Repository = "https://github.com/nalivayev/hump-yard"
Issues = "https://github.com/nalivayev/hump-yard/issues"

[project.scripts]
folder-monitor = "folder_monitor.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
file_monitor = ["*.template.json"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
